--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\gaofutao.SINOSAFE\\AppData\\Local\\Programs\\Python\\Python37\\python.exe"
+    "scm.alwaysShowActions": true
 }
