--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "python.pythonPath": "C:\\Users\\Futao\\AppData\\Local\\Programs\\Python\\Python38\\python.exe",
-    "python.linting.enabled": false
+    "python.linting.enabled": true
 }
