--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
-    "python.pythonPath": "C:\\Users\\gaofutao.SINOSAFE\\AppData\\Local\\Programs\\Python\\Python38\\python.exe",
-    "python.linting.enabled": true
+    "python.linting.enabled": true,
+    "python.linting.flake8Enabled": true,
+    "python.formatting.provider": "yapf"
 }
