--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
+    "python.formatting.autopep8Args": ["--max-line-length", "88", "--experimental"],
     "python.linting.enabled": true,
     "python.linting.flake8Enabled": true,
-    "python.formatting.provider": "yapf"
+    "python.formatting.provider": "black",
+    "python.formatting.blackArgs": ["--line-length", "88"],
 }
